crates/toml_edit/tests/fixtures/invalid/float/exp-double-e-1.stderr
TOML parse error at line 1, column 20
  |
1 | exp-double-e-1 = 1ee2
  |                    ^
Invalid floating-point number
